Updates to make Java work